# constexpr-everything

./: .gitignore  LICENSE  prepare.sh  readme.md
constexpr-everything/: CMakeLists.txt
constexpr-everything/src/: main.cpp
